--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,8 +11,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-typescript": "^1.1.1",
     "next": "^8.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2"
+  },
+  "devDependencies": {
+    "@types/next": "^8.0.1",
+    "@types/react": "^16.8.4",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3"
   }
 }
