--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "tslint -p tsconfig.json -t stylish"
   },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
@@ -17,8 +18,10 @@
     "react-dom": "^16.8.2"
   },
   "devDependencies": {
+    "@socialgouv/tslint-config-recommended": "^0.5.1",
     "@types/next": "^8.0.1",
     "@types/react": "^16.8.4",
+    "prettier": "^1.16.4",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
   }
