--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,17 +12,18 @@
     "lint": "tslint -p tsconfig.json -t stylish"
   },
   "dependencies": {
-    "@zeit/next-typescript": "^1.1.1",
-    "next": "^8.0.1",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "next": "^8.0.3",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   },
   "devDependencies": {
     "@socialgouv/tslint-config-recommended": "^0.5.1",
     "@types/next": "^8.0.1",
-    "@types/react": "^16.8.4",
+    "@types/react": "^16.8.6",
+    "@types/react-dom": "^16.8.2",
+    "@zeit/next-typescript": "^1.1.1",
     "prettier": "^1.16.4",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "tslint": "^5.13.1",
+    "typescript": "^3.3.3333"
   }
 }
