--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,7 +12,10 @@
     "lint": "tslint -p tsconfig.json -t stylish"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "^8.0.3",
+    "next-compose-plugins": "^2.1.1",
+    "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3"
   },
@@ -22,6 +25,7 @@
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@zeit/next-typescript": "^1.1.1",
+    "babel-plugin-module-resolver": "^3.2.0",
     "prettier": "^1.16.4",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
