--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
     "jsx": "preserve",
     "lib": ["dom", "es2017"],
     "module": "esnext",
@@ -14,6 +15,20 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "paths": {
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@components": [
+        "./src/components"
+      ],
+      "@models/*": [
+        "./src/models/*"
+      ],
+      "@models": [
+        "./src/models"
+      ],
+    },
   }
 }
