--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -20,14 +20,11 @@
       "@components/*": [
         "./src/components/*"
       ],
-      "@components": [
-        "./src/components"
+      "@repository": [
+        "./src/repository"
       ],
-      "@models/*": [
-        "./src/models/*"
-      ],
-      "@models": [
-        "./src/models"
+      "@domain": [
+        "./src/domain"
       ],
     },
   }
