--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,10 +12,12 @@
     "lint": "tslint -p tsconfig.json -t stylish"
   },
   "dependencies": {
+    "@types/styled-components": "^4.1.11",
     "next": "^8.0.3",
     "next-compose-plugins": "^2.1.1",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@socialgouv/tslint-config-recommended": "^0.5.1",
@@ -24,6 +26,7 @@
     "@types/react-dom": "^16.8.2",
     "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "prettier": "^1.16.4",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
