--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,6 +12,9 @@
     "lint": "tslint -p tsconfig.json -t stylish"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/styled-components": "^4.1.11",
     "next": "^8.0.3",
     "next-compose-plugins": "^2.1.1",
