--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,11 +20,13 @@
     "next-compose-plugins": "^2.1.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "rxjs": "^6.4.0",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@socialgouv/tslint-config-recommended": "^0.5.1",
     "@types/next": "^8.0.1",
+    "@types/node-fetch": "^2.1.6",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@zeit/next-typescript": "^1.1.1",
