--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,8 +6,9 @@
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
+    "start": "node ./dist/server.js",
     "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/server.ts",
-    "build-ts": "tsc",
+    "build": "tsc",
     "lint": "tslint -p tsconfig.json -t stylish"
   },
   "repository": {
