cis: attempt to build base-dependencies image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 stages:
   - info
   - "build and push base image"
-# - "build and push base-dependencies image"
+  - "build and push base-dependencies image"
 # - "build and push tremplin images"
 
 info:
